	Spell success rate now shown as an actual percentage, not an adjective.  Success >= 98% rounded up to 100%.
	Replaced Silence with Haste in the book of War Chants.
	Replaced Repel Missiles with Throw Frost in book of Minor Magic.
	Selective Amnesia restored as a spell.  Now found in the books of Wizardry, Enchantments, and Dreams.
	Give Assassins more needles (might revert if OP).  Now get 5 each of sleep, slow, confusion.
	Acquirement now shows the exact items the player is choosing from.
		Flaw(?) with current implementation: I think unrands that get generated
		and rejected don't get a second chance to generate.
		
		Also can't see ring bonii if int/str/dex without examination, but this is minor
		(who'd spend an acquirement on one anyway?)
	Skill can now automatically be trained without victory dancing (interface is different from vanilla trunk).
	Manuals now increase the associated skill by 3 levels and disintegrate immediately.
	The Stalker background has been reworked; now emphasizes useful low level spells.
	Every spellbook now has its own unique description.
	Monster HP bars have been replaced with icons that don't mislead the player.
	Felids may no longer be chosen as a player race.
	Okawaru nerf reverted.
	Misc acquirement replaced with potion acquirement.
	Reverted the crystal ball of energy nerf.
	Made silent spectres more interesting; very fast but weak, like mega-megabats with the Silence spell.
		Currently these have 4 HD, may need to change this.
	Skeletal warrior packs have a decent chance of having a silent spectre, very small chance of more than one.
	Mennas has four holy-flavored silent spectres in his group, but can no longer cast Silence himself.
		Also lowered his evasion from 28 to 20, replaced his large shield with a medium shield.
	"Monstrous" demonspawn disabled for now.
	Autoexplore now fails if Str, Dex, or Int is at fatally low levels.
	The halo surrounding TSO followers and divine beings is now visible when using tiles.